# simple_rag_learning

./: .gitignore  README.md  pyproject.toml
scripts/: copy_pdfs_etc.sh
src/: chunking.py  config.py  custom_types.py  helper.py  ingestion.py  query.py  vectorization.py
