[project]
name = "simple-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "faiss-cpu>=1.12.0",
    "polars>=1.32.3",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "unstructured[pdf]>=0.18.13",
]
